--- a/NeverMissIt/templates/NeverMissIt/homepage.html
+++ b/NeverMissIt/templates/NeverMissIt/homepage.html
@@ -14,7 +14,7 @@
     <title>Homepage</title>
     <style>
         body {
-            background-image: url("https://images.unsplash.com/photo-1505909182942-e2f09aee3e89?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80");
+            background-image: url("https://wallpaperaccess.com/full/1580007.jpg");
             background-repeat: no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -213,15 +213,15 @@
             </div> -->
     <!-- </nav> -->
     <div class="left">
-        <img src="https://blog.trello.com/hubfs/Productivity__236_-_More_Productive_and_Efficient_Events_402x.png"
+        <img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/f4e6c502-2ff5-476a-b124-4ef520134a84.png"
             alt="events">
 
     </div>
     <br>
-    <center> <h1>NEVER MISS IT</h1></center>
+    <center> <h1 style="color:white">Compil Vision</h1></center>
     <div class="text">
         
-        <h2>Current Events</h2>
+        <h2 style="color:white">Events</h2>
         
     </div>
     
@@ -243,7 +243,10 @@
             About us
         <br>
     
-        This is an event portal for managing events for our college. Users can create and publish their events which will be available for other users to register and apply for. There will be list of registered events in the user dashboard, and thus reminding them each time they log in
+        This is a mock event portal for managing events for our college. Users can create and publish 
+        their events which will be available for other users to register and apply for. 
+        There will be list of registered events in the user dashboard, and thus reminding them each time 
+        they log in
     </div>
     
 </body>
