--- a/NeverMissIt/templates/NeverMissIt/loginpage.html
+++ b/NeverMissIt/templates/NeverMissIt/loginpage.html
@@ -7,7 +7,7 @@
             color: black;
           margin: 0;
           padding: 0;
-          background-image: url("https://images.unsplash.com/photo-1505909182942-e2f09aee3e89?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80");
+          background-image: url("https://wallpaperaccess.com/full/1580007.jpg");
           -webkit-background-size: cover;
           background-size: cover;
           background-repeat: no-repeat;
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="login_box">
-        <img src="https://blog.trello.com/hubfs/Productivity__236_-_More_Productive_and_Efficient_Events_402x.png" alt="login_avatar" class="avatar">
+        <img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/f4e6c502-2ff5-476a-b124-4ef520134a84.png" alt="login_avatar" class="avatar">
         <h1>Login</h1>
     <form action="" method="POST">
 
