--- a/NeverMissIt/templates/NeverMissIt/profilepage.html
+++ b/NeverMissIt/templates/NeverMissIt/profilepage.html
@@ -19,7 +19,7 @@
         body{
 
 
-        background-image: url("https://images.unsplash.com/photo-1505909182942-e2f09aee3e89?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80");
+        background-image: url("https://wallpaperaccess.com/full/1580007.jpg");
             background-repeat: no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -248,7 +248,7 @@
 <body>
     <header class="header">
         <div class="lefttop">
-            <img src="https://blog.trello.com/hubfs/Productivity__236_-_More_Productive_and_Efficient_Events_402x.png"
+            <img src="https://s3.amazonaws.com/thumbnails.venngage.com/template/f4e6c502-2ff5-476a-b124-4ef520134a84.png"
             alt="events">
 
 
