homepage css changed

--- a/NeverMissIt/templates/NeverMissIt/homepage.html
+++ b/NeverMissIt/templates/NeverMissIt/homepage.html
@@ -64,7 +64,7 @@
             text-decoration: none;
             height:auto;
             width:auto;
-            background-color: black;
+            background-color: blue;
             border: 4px groove transparent;
             display: flex;
             justify-content: center;
